fixing strange scaling issue on mobile
line 40
 - changed overflow-x: hidden; to overflow: hidden;

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,7 +37,7 @@
 
 body{
     min-height: 100vh;
-    overflow-x: hidden;
+    overflow: hidden;
     margin:0%;
 }
 
